--- a/style.css
+++ b/style.css
@@ -12,8 +12,35 @@
 header {
   background-color: #6b655b;
   margin-bottom: 40px;
-  display: block;
 }
+
+header h1 {
+  color: #eff0e5;
+  text-align: center;
+  margin: 0;
+  padding-top: 30px;
+  font-family: 'Nanum Pen Script', cursive;
+  font-size: 56px;
+  text-align: center;
+}
+
+header nav{
+	display: flex;
+	justify-content: center;
+}
+
+header nav ul{
+	display: flex;
+	padding-left: 0;
+	list-style: none;
+}
+
+header nav ul li a{
+	color: #eff0e5;
+	text-decoration: none;
+	margin-right: 10px;
+}
+
 
 main h2 {
   font-size: 28px;
@@ -22,14 +49,7 @@ main h2 {
 }
 
 
-header h1 {
-  color: #eff0e5;
-  text-align: center;
-  margin: 0;
-  padding: 20px 0;
-  font-family: 'Nanum Pen Script', cursive;
-  font-size: 56px;
-}
+
 
 
 /* Group and Items mobile first  */
@@ -67,13 +87,29 @@ header h1 {
 
 /* This applies from 600px and larger */
 @media all and (min-width: 600px) {
-   article, h1 {
+   article{
      padding: 0 10%;
    }
 
    .group {
      flex-direction: row;
    }
+   
+   header {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 30px;
+  }
+  
+  header nav{
+	  margin-top: 10px;
+  }
+  
+  header h1{
+	padding-top: 0;	
+	font-size: 42px;
+	margin: 15px 0;
+  }
 }
 
 .item img{
@@ -86,4 +122,17 @@ img.rounded {
 
 .bg-dark {
   background-color: #c5c0b8;
+}
+
+form input, form textarea{
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+#contact .item{
+	padding-right: 40px;
+}
+
+.space-section {
+	margin-bottom: 80px;
 }
