--- a/style.css
+++ b/style.css
@@ -85,8 +85,8 @@ main h2 {
 	padding-bottom: 30px;
 }
 
-/* This applies from 800px and larger */
-@media all and (min-width: 800px) {
+/* This applies from 600px and larger */
+@media all and (min-width: 600px) {
    article{
      padding: 0 10%;
    }
@@ -115,9 +115,16 @@ main h2 {
 .item img{
   width: 100%;
 }
+.portfolio img{
+  border: 0;
+  width: 100%;
+  height: 100%;
+  max-height: 200px;
+  object-fit: cover;
+}
 
 img.rounded {
-  border-radius: 8px;
+  border-radius: 50%;
 }
 
 .bg-dark {
