--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ header h1 {
   text-align: center;
   margin: 0;
   padding-top: 30px;
-  font-family: 'Nanum Pen Script', cursive;
+  font-family: 'Nanum Pen Script', 'Brush Script MT';
   font-size: 56px;
   text-align: center;
 }
@@ -57,7 +57,7 @@ main h2 {
 .group{
 	display: flex;
 	flex-direction: column;
-	margin-bottom: 100px;
+	margin-bottom: 30px;
 }
 
 .group-no-mg{
@@ -81,18 +81,19 @@ main h2 {
 	margin-bottom: 0;
 }
 
-.bottom-margin {
+.bottom-padding {
 	padding-bottom: 30px;
 }
 
 /* This applies from 600px and larger */
 @media all and (min-width: 600px) {
    article{
-     padding: 0 10%;
+     padding: 50px 10%;
    }
 
    .group {
      flex-direction: row;
+	 margin-bottom: 60px;
    }
    
    header {
@@ -109,8 +110,9 @@ main h2 {
 	padding-top: 0;	
 	font-size: 42px;
 	margin: 15px 0;
-  }
+  } 
 }
+
 
 .item img{
   width: 100%;
@@ -121,6 +123,11 @@ main h2 {
   height: 100%;
   max-height: 200px;
   object-fit: cover;
+}
+
+.portfolio {
+  margin-top: 2em;
+  margin-right: 4em;
 }
 
 img.rounded {
@@ -141,5 +148,26 @@ form input, form textarea{
 }
 
 .space-section {
-	margin-bottom: 80px;
+	margin-bottom: 30px;
+}
+.space-section-top {
+	margin-top: 30px;
+}
+
+.container-iframe {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  padding-top: 62.5%; /* 8:5 Aspect Ratio */
+}
+
+.responsive-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
 }
