--- a/style.css
+++ b/style.css
@@ -85,33 +85,6 @@ main h2 {
 	padding-bottom: 30px;
 }
 
-/* This applies from 600px and larger */
-@media all and (min-width: 600px) {
-   article{
-     padding: 50px 10%;
-   }
-
-   .group {
-     flex-direction: row;
-     margin-bottom: 100px;
-   }
-   
-   header {
-    display: flex;
-    justify-content: space-between;
-    padding: 0 30px;
-  }
-  
-  header nav{
-	  margin-top: 10px;
-  }
-  
-  header h1{
-	padding-top: 0;	
-	font-size: 42px;
-	margin: 15px 0;
-  } 
-}
 
 
 .item img{
@@ -170,4 +143,40 @@ form input, form textarea{
   width: 100%;
   height: 100%;
   border: none;
+}
+
+/* This applies from 300px and larger */
+@media all and (min-width: 300px) {
+	.portfolio {
+           margin-top: 2em;
+           margin-right: 4em;
+	}
+}
+
+/* This applies from 600px and larger */
+@media all and (min-width: 600px) {
+   article{
+     padding: 50px 10%;
+   }
+
+   .group {
+     flex-direction: row;
+     margin-bottom: 100px;
+   }
+   
+   header {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 30px;
+  }
+  
+  header nav{
+	  margin-top: 10px;
+  }
+  
+  header h1{
+	padding-top: 0;	
+	font-size: 42px;
+	margin: 15px 0;
+  } 
 }
